--- a/product-service/package.json
+++ b/product-service/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@middy/core": "^1.5.2",
+    "@middy/http-cors": "^2.5.1",
     "@middy/http-json-body-parser": "^1.5.2",
     "source-map-support": "^0.5.19"
   },
