--- a/product-service/package.json
+++ b/product-service/package.json
@@ -22,8 +22,8 @@
     "@types/jest": "^27.0.1",
     "@types/node": "^14.14.25",
     "aws-lambda-mock-context": "^3.2.1",
+    "aws-sdk-mock": "^5.2.2",
     "jest": "^27.0.6",
-    "jest-aws-sdk-mock": "^1.0.2",
     "json-schema-to-ts": "^1.5.0",
     "prettier": "^2.3.2",
     "serverless": "^2.23.0",
