--- a/product-service/package.json
+++ b/product-service/package.json
@@ -24,6 +24,8 @@
     "@types/aws-lambda": "^8.10.71",
     "@types/jest": "^27.0.1",
     "@types/node": "^14.14.25",
+    "@types/pg": "^8.6.1",
+    "@types/uuid": "^8.3.1",
     "aws-lambda-mock-context": "^3.2.1",
     "jest": "^27.0.6",
     "json-schema-to-ts": "^1.5.0",
