--- a/import-service/tsconfig.json
+++ b/import-service/tsconfig.json
@@ -2,10 +2,12 @@
   "extends": "./tsconfig.paths.json",
   "compilerOptions": {
     "lib": ["ESNext"],
+    "esModuleInterop": true,
     "moduleResolution": "node",
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "removeComments": true,
+    "resolveJsonModule": true,
     "sourceMap": true,
     "target": "ES2020",
     "outDir": "lib"
