--- a/import-service/package.json
+++ b/import-service/package.json
@@ -5,7 +5,7 @@
   "main": "serverless.ts",
   "scripts": {
     "deploy": "sls deploy",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "engines": {
     "node": ">=14.15.0"
@@ -21,10 +21,13 @@
   "devDependencies": {
     "@serverless/typescript": "^2.23.0",
     "@types/aws-lambda": "^8.10.71",
+    "@types/jest": "^27.0.2",
     "@types/node": "^14.14.25",
+    "jest": "^27.2.1",
     "json-schema-to-ts": "^1.5.0",
     "serverless": "^2.23.0",
     "serverless-webpack": "^5.3.5",
+    "ts-jest": "^27.0.5",
     "ts-loader": "^8.0.15",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
