--- a/authorization-service/package.json
+++ b/authorization-service/package.json
@@ -25,6 +25,7 @@
     "jest": "^27.2.1",
     "json-schema-to-ts": "^1.5.0",
     "serverless": "^2.23.0",
+    "serverless-dotenv-plugin": "^3.10.0",
     "serverless-webpack": "^5.3.5",
     "ts-jest": "^27.0.5",
     "ts-loader": "^8.0.15",
