--- a/bff-service/.gitignore
+++ b/bff-service/.gitignore
@@ -36,3 +36,8 @@ lerna-debug.log*
 
 # ENV
 .env
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
