--- a/bff-service/package.json
+++ b/bff-service/package.json
@@ -18,7 +18,10 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "eb:init": "eb init uladzimirkuzmin-bff-api --platform node.js --region eu-west-1",
+    "eb:create": "eb create dev1 --single --cname uladzimirkuzmin-bff-api-dev1",
+    "eb:terminate": "eb terminate"
   },
   "dependencies": {
     "@nestjs/axios": "^0.0.3",
